--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                             <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_crud_index') }}">Admin</a>
+                            <a class="nav-link" href="{{ path('app_crud_index') }}">Solo Admin</a>
                         </li>
 
 
